[package]
name = "distrust"
version = "0.0.0"
authors = ["Edward Kmett <ekmett@gmail.com>"]
description = "a succinct playground"
repository = "https://github.com/ekmett/distrust"
edition = "2018"

[badges]
travis-ci = { repository = "ekmett/distrust" }
appveyor = { repository = "ekmett/distrust" }

[dependencies]
bitintr = "0.1.6"
